Login and Registration
Completed the db implementation for Registration screen
Working on the db implementation for Login screen

--- a/ExpenseReport/res/layout/fragment_main.xml
+++ b/ExpenseReport/res/layout/fragment_main.xml
@@ -23,6 +23,7 @@
         android:layout_below="@+id/password"
         android:layout_marginTop="42dp"
         android:background="@drawable/buttoncolor"
+        android:onClick="login"
         android:text="Login" />
 
     <EditText
